--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin-top: 50px;
     background: url("https://images.pexels.com/photos/4472063/pexels-photo-4472063.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
     background-size: cover;
-    color: grey;
+    color: #a5b0c2;
 
 
 }
