--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
     font-family: 'Bebas Neue';
     font-size: 30px;
     padding: 0;
+    color: #000000;
 }
 
 h4 {
@@ -21,6 +22,7 @@ h4 {
     font-style: italic;
     font-size: 14px;
     margin: 0;
+    color: #000000;
 }
 
  .container{
