--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ h4 {
     color: #000000;
 }
 
+  span {
+    font-style: italic;
+    color:#000000;
+    font-size: 12px;
+  }
+
+
  .container{
    display: block;
    text-align: center;
